Modal not showing issue

--- a/src/App.css
+++ b/src/App.css
@@ -730,10 +730,6 @@
     width: 90%;
 }
 
-.react-modal-sheet-backdrop {
-    pointer-events: all !important;
-}
-
 .react-modal-sheet-container {
     /* custom styles */
 }
